--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,14 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: stefanoric
 github_username:  stefanoric
 
-site.disqus.shortname: stefanoricciardicom
-site.google_analytics: UA-15612899-1
+disqus:
+    shortname: my_disqus_shortname
+google_analytics: UA-15612899-1
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
+theme: minimal-mistakes-jekyll
 gems:
   - jekyll-feed
 exclude:
