--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ analytics:
 # Build settings
 markdown: kramdown
 #theme: minima
-theme: minimal-mistakes-jekyll
+#theme: minimal-mistakes-jekyll
 gems:
   - jekyll-feed
 exclude:
